--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,13 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022"
+    "module": "ES2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force"
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
