--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build-dev": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:schedule": "node dist/schedule/server/server.mjs"
+    "serve:ssr:schedule": "node dist/schedule/server/server.mjs",
+    "vercel-build": "npm run build:ssr"
   },
   "private": true,
   "dependencies": {
