--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:schedule": "node dist/schedule/server/server.mjs",
-    "build:ssr": "tsc -p tsconfig.server.json"
+    "serve:ssr:schedule": "node dist/schedule/server/server.mjs"
   },
   "private": true,
   "dependencies": {
