--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:schedule": "node dist/schedule/server/server.mjs",
-    "vercel-build": "npm run build:ssr"
+    "vercel-build": "npm run build-dev"
   },
   "private": true,
   "dependencies": {
