--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.14",
     "@netlify/angular-runtime": "^2.4.0",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
     "express": "^4.21.2",
     "rxjs": "~7.8.0",
