--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "less",
+            "aot": true,
             "assets": [
               {
                 "glob": "**/*",
@@ -85,6 +86,7 @@
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "less",
+            "aot": true,
             "assets": [
               {
                 "glob": "**/*",
